--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
         <div class="grid-item">
             <div class="inner-grid">
-                <div class="inner-grid-item a"><h3>PC Spec</h3></div>
+                <div class="inner-grid-item a"><h3 id="pcs">PC Spec</h3></div>
                 <div class="inner-grid-item b"><img class="spec" src="img/rock.png" alt="rock"></div>
                 <div class="inner-grid-item c"><input id="cr" type="text" value="0" disabled></div>
                 <div class="inner-grid-item d"><img class="spec" src="img/paper.png" alt="paper"></div>
